# voiture

./: .gitignore  CMakeLists.txt  Makefile  README.md  background.c  background.h  exec  gmon.out  ia.c  ia.h  jeu.c  jeu.h  main.c  makefile  next_step.txt
include/: background.h  collision_car.h  create_map.h  ia.h  jeu.h
src/: background.c  collision_car.c  create_map.c  ia.c  ia_voiture.drawio  jeu.c  main.c
